Docker e Rabbit MQ

--- a/build.gradle
+++ b/build.gradle
@@ -28,10 +28,11 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-actuator' // Adicione esta linha
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.boot:spring-boot-starter-amqp'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    runtimeOnly 'com.microsoft.sqlserver:mssql-jdbc'
+    runtimeOnly 'org.postgresql:postgresql'
 }
 
 tasks.named('test') {
