--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,27 +1,26 @@
+# Configurações para rodar localmente (fora do Docker)
 spring.application.name=aggregador-node
-
-
-spring.datasource.url=jdbc:sqlserver://DESKTOP-TQTCN84;databaseName=AgregadorDB;encrypt=true;trustServerCertificate=true;
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=AgregadorDB;encrypt=true;trustServerCertificate=true;
 spring.datasource.username=dev_user
-spring.datasource.password=123456789
+spring.datasource.password=123456789 # Sua senha local
 
-management.endpoints.web.exposure.include=health,info,metrics,loggers,env
-
-management.endpoint.health.show-details=always
-
+# Configurações de segurança para desenvolvimento local
 spring.security.user.name=admin
 spring.security.user.password=senhaForteParaAdmin123
 spring.security.user.roles=ADMIN
-
 nodes.api.key=CHAVE_SECRETA_DOS_COLETORES
 
-info.app.name=Nó Agregador de Dados
-info.app.description=Serviço responsável por agregar dados de múltiplas fontes.
-info.app.version=1.0.0-SNAPSHOT
+# --- Configurações do RabbitMQ ---
+# O host 'rabbitmq' é o nome do serviço no docker-compose
+spring.rabbitmq.host=rabbitmq
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=${RABBITMQ_USER} # Puxa do .env
+spring.rabbitmq.password=${RABBITMQ_PASS} # Puxa do .env
 
-# Dialeto do Hibernate
-spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
+# Nome da fila que o agregador vai escutar
+rabbitmq.queue.name=lotes_de_dados
+
+# Outras configurações
+management.endpoints.web.exposure.include=health,info,metrics,loggers,env
+management.endpoint.health.show-details=always
 spring.jpa.hibernate.ddl-auto=update
-
-# Desabilitar console do H2
-spring.h2.console.enabled=false
