--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,26 +1,27 @@
-# Configurações para rodar localmente (fora do Docker)
 spring.application.name=aggregador-node
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=AgregadorDB;encrypt=true;trustServerCertificate=true;
-spring.datasource.username=dev_user
-spring.datasource.password=123456789 # Sua senha local
+spring.datasource.url=jdbc:postgresql://postgres-db:5432/AgregadorDB
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.username=postgres
+spring.datasource.password=root
 
-# Configurações de segurança para desenvolvimento local
 spring.security.user.name=admin
 spring.security.user.password=senhaForteParaAdmin123
 spring.security.user.roles=ADMIN
 nodes.api.key=CHAVE_SECRETA_DOS_COLETORES
 
-# --- Configurações do RabbitMQ ---
-# O host 'rabbitmq' é o nome do serviço no docker-compose
 spring.rabbitmq.host=rabbitmq
 spring.rabbitmq.port=5672
-spring.rabbitmq.username=${RABBITMQ_USER} # Puxa do .env
-spring.rabbitmq.password=${RABBITMQ_PASS} # Puxa do .env
+spring.rabbitmq.username=${SPRING_RABBITMQ_USERNAME}
+spring.rabbitmq.password=${SPRING_RABBITMQ_PASSWORD}
 
-# Nome da fila que o agregador vai escutar
 rabbitmq.queue.name=lotes_de_dados
+rabbitmq.queue.websocket.name=websocket_all
 
-# Outras configurações
 management.endpoints.web.exposure.include=health,info,metrics,loggers,env
 management.endpoint.health.show-details=always
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.jdbc.time_zone=America/Sao_Paulo
+
+
+spring.profiles.active=dev
+logging.config=classpath:log4j2.xml
