web socket funcionando

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,7 +19,7 @@ rabbitmq.queue.websocket.name=websocket_all
 
 management.endpoints.web.exposure.include=health,info,metrics,loggers,env
 management.endpoint.health.show-details=always
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.jdbc.time_zone=America/Sao_Paulo
 
 
