--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,27 +1,23 @@
+# Configurações para a nuvem (lendo de variáveis de ambiente)
 spring.application.name=aggregador-node
-spring.datasource.url=jdbc:postgresql://postgres-db:5432/AgregadorDB
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.username=postgres
-spring.datasource.password=root
 
-spring.security.user.name=admin
-spring.security.user.password=senhaForteParaAdmin123
-spring.security.user.roles=ADMIN
-nodes.api.key=CHAVE_SECRETA_DOS_COLETORES
+# Configurações do Banco de Dados (lidas do Render)
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.jpa.properties.hibernate.dialect=${SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT}
 
-spring.rabbitmq.host=rabbitmq
-spring.rabbitmq.port=5672
+# Configurações do RabbitMQ (lidas do Render)
+spring.rabbitmq.host=${SPRING_RABBITMQ_HOST}
 spring.rabbitmq.username=${SPRING_RABBITMQ_USERNAME}
 spring.rabbitmq.password=${SPRING_RABBITMQ_PASSWORD}
+spring.rabbitmq.virtual-host=${SPRING_RABBITMQ_VIRTUAL_HOST}
 
+# Nomes das Filas
 rabbitmq.queue.name=lotes_de_dados
 rabbitmq.queue.websocket.name=websocket_all
 
-management.endpoints.web.exposure.include=health,info,metrics,loggers,env
+# Outras configurações
+spring.jpa.hibernate.ddl-auto=update
+management.endpoints.web.exposure.include=health,info,metrics
 management.endpoint.health.show-details=always
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.properties.hibernate.jdbc.time_zone=America/Sao_Paulo
-
-
-spring.profiles.active=dev
-logging.config=classpath:log4j2.xml
