fix: Expondo o end point prometheus

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,5 +19,5 @@ rabbitmq.queue.websocket.name=websocket_all
 
 # Outras configurações
 spring.jpa.hibernate.ddl-auto=update
-management.endpoints.web.exposure.include=health,info,metrics
+management.endpoints.web.exposure.include=health,info,metrics,prometheus
 management.endpoint.health.show-details=always
