feat: Adicionando memória cache para diminuição do Data Transfer no plano gratuito do banco de dados NEON

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,6 @@ rabbitmq.queue.websocket.name=websocket_all
 spring.jpa.hibernate.ddl-auto=update
 management.endpoints.web.exposure.include=health,info,metrics,prometheus
 management.endpoint.health.show-details=always
+
+# Configura o cache para expirar os dados 30 segundos após serem gravados
+spring.cache.caffeine.spec=expireAfterWrite=20s
